--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "moment-hijri": "^2.1.2",
     "next": "14.0.4",
     "react": "^18",
