--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment-hijri": "^2.1.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
   },
