--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
     "Isha",
     "JAMAAT",
     "Maghrib",
+    "nextauth",
+    "nextui",
     "QADA",
-    "salah"
+    "salah",
+    "tahajjud"
   ]
 }
