--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,9 +9,22 @@
   "description": "Salah Tracker",
   "icons": [
     {
-      "src": "./next.svg",
+      "src": "./secure-date-calendar-icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./secure-date-calendar-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./secure-date-calendar-icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
