--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,22 @@
 {
   "name": "Salah Tracker",
-  "short_name": "Installable",
-  "theme_color": "#000000",
-  "background_color": "#ffffff",
+  "short_name": "Salah",
+  "theme_color": "#ffffff",
+  "background_color": "#000000",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "description": "Salah Tracker",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "./secure-date-calendar-icon-144.png",
+      "src": "./secure-date-calendar-icon-192.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./secure-date-calendar-icon-192.png",
+      "src": "./secure-date-calendar-icon-512.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
