--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@vercel/postgres": "^0.5.1",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^10.17.6",
     "moment-hijri": "^2.1.2",
-    "next": "14.1.0",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -31,11 +31,11 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
