--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "framer-motion": "^11.0.20",
@@ -32,6 +33,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
